# OrangixToolkits

./: CMakeLists.txt  README.md
docs/: architecture.md  design-spec.md
resources/: icons.qrc
src/components/: AnimatedButton.cpp  AnimatedButton.h  BlurBackground.cpp  BlurBackground.h  GlassPanel.cpp  GlassPanel.h  NotificationToast.cpp  NotificationToast.h  OrangixStyle.h
src/widgets/: SearchBar.cpp  SearchBar.h  SideBar.cpp  SideBar.h
